finally found the bug with the background shifting and deleted old css

--- a/public/css/market.css
+++ b/public/css/market.css
@@ -1,5 +1,6 @@
 body {
   font-family: Pixelify Sans;
+  overflow: hidden;
   color: white;
   margin: 0;
   padding: 0;
@@ -42,6 +43,7 @@ body {
   float: left;
   overflow: hidden;
 }
+
 .dropdown .dropbtn {
   font-size: 16px;
   border: none;
@@ -102,112 +104,7 @@ body {
   color: #fff;
   text-shadow: #000 1px 0 13px;
 }
-.img {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #fff;
-  box-shadow: #000 4px 0 20px;
-}
-.box-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 50px;
-}
-.nav {
-  min-height: 91vh;
-  width: 250px;
-  background-color: var(--background-color2);
-  position: absolute;
-  top: 0px;
-  left: 00;
-  box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-  padding: 30px 0 20px 10px;
-}
-.navcontainer {
-  height: calc(100vh - 70px);
-  width: 250px;
-  position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  transition: all 0.5s ease-in-out;
-}
-.box-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 50px;
-}
-.nav {
-  min-height: 91vh;
-  width: 250px;
-  background-color: var(--background-color2);
-  position: absolute;
-  top: 0px;
-  left: 00;
-  box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-  padding: 30px 0 20px 10px;
-}
-.navcontainer {
-  height: calc(100vh - 70px);
-  width: 250px;
-  position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  transition: all 0.5s ease-in-out;
-}
-.navcontainer::-webkit-scrollbar {
-  display: none;
-}
-.navclose {
-  width: 80px;
-}
-.nav-option {
-  width: 250px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  padding: 0 30px 0 20px;
-  gap: 20px;
-  transition: all 0.1s ease-in-out;
-}
 
-.nav-img {
-  height: 30px;
-}
-
-.nav-upper-options {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-}
-
-.option1 {
-  border-left: 5px solid #010058af;
-  background-color: var(--Border-color);
-  color: white;
-  cursor: pointer;
-}
-.option1:hover {
-  border-left: 5px solid #010058af;
-  background-color: var(--Border-color);
-}
 .box {
   height: 270px;
   width: 250px;
@@ -220,10 +117,12 @@ body {
   cursor: pointer;
   background: radial-gradient(circle, #3d0a43, #6f057a);
 }
+
 .box:hover {
   transform: scale(0.95);
   transition: transform 0.3s ease;
 }
+
 .token_box {
  	background: #6f057a;
  	padding: 20px;
@@ -234,11 +133,6 @@ body {
  	font-size: 20px;
  	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
  	margin-left: 20px;
-}
-img {
-  border-radius: 4px;
-  padding: 5px;
-  width: 150px;
 }
 #animationCanvas {
   display: none;
